--- a/views/home.html
+++ b/views/home.html
@@ -164,10 +164,10 @@ $(document).on('click','ul li',function(){
                         <div class="social_media">
                           <br><br><br><br>
                             <ul>
-                            <li><a href="" target="_blank"><img src="images/twitter.png"></a></li>&emsp;
-                            <li><a href="" target="_blank"><img src="images/instagram.png"></a></li>&emsp;
-                            <li><a href="" target="_blank"><img src="images/linkedin.png"></a></li>&emsp;
-                            <li><a href="" target="_blank"><img src="images/github.png"></a></li>
+                            <li><a href="https://www.twitter.com/vijayasaivs" target="_blank"><img src="images/twitter.png"></a></li>&emsp;
+                            <li><a href="https://www.instagram.com/vjsaivs" target="_blank"><img src="images/instagram.png"></a></li>&emsp;
+                            <li><a href="https://www.linkedin.com/in/vijayasaivs" target="_blank"><img src="images/linkedin.png"></a></li>&emsp;
+                            <li><a href="https://github.com/vijayasaivs" target="_blank"><img src="images/github.png"></a></li>
                             </ul>
                          </div>
                          <p class="credits" style="text-align: right;font-size: 20px;">&emsp;Created By, Vijay Sai</p>
